# tempfile

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  NEWS  README.md  appveyor.yml  build.rs  deny.toml
.github/: dependabot.yml
.github/workflows/: bsd.yml  ci.yml  freebsd.yml  illumos.yml  redox.yml  run-on-android.sh  run-on-host.sh  zizmor.yml
src/: dir.rs  directory.rs  env.rs  error.rs  lib.rs  named.rs  spooled.rs  unnamed.rs  util.rs
src/dir/: mod.rs
src/dir/imp/: any.rs  unix.rs
src/file/: mod.rs
src/file/imp/: mod.rs  unix.rs  windows.rs
src/imp/: linux.rs  mod.rs  redox.rs  unix.rs  unix_common.rs  windows.rs
tests/: env.rs  namedtempfile.rs  spooled.rs  spooled_tempfile.rs  tempdir.rs  tempfile.rs  test.rs
tests/common/: mod.rs
