[package]
name = "tempfile"
version = "3.3.0"
authors = [
  "Steven Allen <steven@stebalien.com>",
  "The Rust Project Developers",
  "Ashley Mannix <ashleymannix@live.com.au>",
  "Jason White <me@jasonwhite.io>",
]
documentation = "https://docs.rs/tempfile"
edition = "2018"
exclude = ["/.travis.yml", "/appveyor.yml"]
homepage = "http://stebalien.com/projects/tempfile-rs"
keywords = ["tempfile", "tmpfile", "filesystem"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Stebalien/tempfile"
description = "A library for managing temporary files and directories."

[dependencies]
cfg-if = "1"
fastrand = "1.6.0"
remove_dir_all = "0.5"

[target.'cfg(any(unix, target_os = "wasi"))'.dependencies]
rustix = { version = "0.35.6", features = ["fs"] }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.36"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
]

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.2.9"

[dev-dependencies]
doc-comment = "0.3"

[features]
nightly = []
